# CurriePing

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.circleci/: config.yml
.github/workflows/: release.yml
app/: Dockerfile  __init__.py  alerts.py  checker.py  config.py  export.py  favicons.py  main.py  store.py
app/templates/: index.html
proxy/: Caddyfile  Caddyfile.www
scripts/: auto-update.sh  enable-docker-ipv6.sh
